Terraform/modules/vpc-subnet/vpc-network-acl.tf
resource "aws_network_acl" "acl" {
  vpc_id = "${aws_vpc.vpc.id}"

  ingress {
    rule_no    = 100
    protocol   = -1
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  egress {
    rule_no    = 100
    protocol   = -1
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  tags {
    Name = "NWACL-${var.vpc_name}"
  }
}
